Passing data between activities using Intent.

--- a/HTTPRequest/app/src/main/res/layout/activity_secondary.xml
+++ b/HTTPRequest/app/src/main/res/layout/activity_secondary.xml
@@ -10,7 +10,11 @@
         android:id="@+id/textView2nd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="204dp"
+        android:layout_marginEnd="156dp"
         android:text="SEGUNDA TELA"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="204dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
